--- a/src/app/components/pages/service/service.html
+++ b/src/app/components/pages/service/service.html
@@ -25,9 +25,8 @@
                 class="max-w-5xl mx-auto rounded-3xl overflow-hidden shadow-2xl">
                 <swiper-slide *ngFor="let f of features">
                     <div
-                        class="relative bg-red-500 rounded-3xl overflow-hidden flex flex-col items-center justify-center text-center min-h-[420px] transition-all duration-700">
-                        <img [src]="f.image" [alt]="f.title"
-                            class="absolute inset-0 w-full h-full object-cover opacity-70" />
+                        class="relative  rounded-3xl overflow-hidden flex flex-col items-center justify-center text-center min-h-[420px] transition-all duration-700">
+                        <img [src]="f.image" [alt]="f.title" class="absolute inset-0 w-full h-full object-cover" />
                         <div class="relative z-10 p-10 text-white space-y-5">
                             <div class="w-16 h-16 flex items-center justify-center rounded-full mx-auto mb-4 shadow-md"
                                 [ngClass]="f.iconBg">
