--- a/src/app/components/pages/service/service.html
+++ b/src/app/components/pages/service/service.html
@@ -99,8 +99,9 @@
                         <button (click)="closeModal()"
                             class="text-white text-2xl leading-none hover:text-gray-300">×</button>
                     </div>
-                    <div class="p-10 flex flex-col items-center text-center space-y-6">
-                        <div class="w-20 h-20 rounded-full flex items-center justify-centerbg-gradient-to-br from-pink-500 to-red-600 
+                    <div
+                        class="p-10 flex flex-col items-center text-center space-y-6 place-content-center place-items-center">
+                        <div class="w-20 h-20 rounded-full flex items-center place-content-center justify-centerbg-gradient-to-br from-pink-500 to-red-600 
                 shadow-[0_0_25px_rgba(255,0,120,0.7)] animate-pulse">
                             <i class="pi pi-clock text-white text-3xl"></i>
                         </div>
