--- a/src/app/components/outbound/outbound-package/outbound-package.html
+++ b/src/app/components/outbound/outbound-package/outbound-package.html
@@ -11,11 +11,11 @@
     <!-- <div
         class="rounded-2xl max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 bg-gradient-to-r from-red-500 to-pink-600  p-8 mb-12 text-white text-center"> -->
     <div class="rounded-2xl max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 p-8 mb-12 text-white text-center bg-cover bg-center border-red-500"
-        style="background-image: url('assets/images/outboundHeader4.png');">
+        style="background-image: url('assets/images/inboundHeader4.png');">
         <div class="text-center relative max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div data-animate="hero" class="text-center space-y-6">
                 <h3 class="text-3xl md:text-4xl font-bold mb-4 transform transition-all duration-1000">
-                    {{ packageData?.title }}
+                    {{ packageData?.heading }}
                 </h3>
                 <div class="flex items-center justify-center space-x-4 text-xl">
                     <span class="bg-white bg-opacity-20 px-4 py-2 rounded-full">
@@ -65,13 +65,11 @@
                         [style.maxHeight]="openSection.includes(section.id) ? '3000px' : '0px'">
                         <div>
                             <ng-container [ngSwitch]="section.id">
-                                <!-- <app-outbound-overview *ngSwitchCase="'overview'"
-                                    [stateHighlights]="stateHighlights"></app-outbound-overview> -->
 
-                                <!-- <app-outbound-itinerary *ngSwitchCase="'overview'"
+                                <app-outbound-itinerary *ngSwitchCase="'overview'"
                                     [detailedItinerary]="packageData?.detailedItinerary"></app-outbound-itinerary>
 
-                                <app-outbound-hotels *ngSwitchCase="'hotels'" [hotels]="packageData?.hotels"
+                                <!--<app-outbound-hotels *ngSwitchCase="'hotels'" [hotels]="packageData?.hotels"
                                     [transport]="packageData?.transport" [childPolicy]="packageData?.childPolicy"
                                     [meals]="packageData?.meals">
                                 </app-outbound-hotels>
