--- a/src/app/components/outbound/outbound-package/outbound-package.html
+++ b/src/app/components/outbound/outbound-package/outbound-package.html
@@ -31,6 +31,7 @@
     </div>
 
     <!-- Apart Section -->
+    @if (packageData?.tourHighlights?.length) {
     <section
         class="max-w-7xl mx-auto  rounded-2xl bg-white p-4 shadow-xl border-1 border-red-500 mb-6 text-center bg-[url('assets/images/whitebg1.jpg')] bg-cover bg-center">
         <h2 class="text-xl md:text-2xl font-bold text-gray-900 mb-8 relative inline-block" data-aos="fade-up">
@@ -43,6 +44,7 @@
                 <i class="pi pi-check text-xs"></i> {{ item }} </span>
         </div>
     </section>
+    }
     <div
         class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 r bg-[url('assets/images/inboundBg.png')] bg-cover bg-center p-6 rounded-2xl">
         <section class="bg-white mx-auto px-4 sm:px-6 lg:px-8 py-8 rounded-3xl mt-8">
@@ -68,13 +70,11 @@
 
                                 <app-outbound-itinerary *ngSwitchCase="'overview'"
                                     [detailedItinerary]="packageData?.detailedItinerary"></app-outbound-itinerary>
-
-                                <!--<app-outbound-hotels *ngSwitchCase="'hotels'" [hotels]="packageData?.hotels"
-                                    [transport]="packageData?.transport" [childPolicy]="packageData?.childPolicy"
-                                    [meals]="packageData?.meals">
+                                <app-outbound-hotels *ngSwitchCase="'hotels'" [hotels]="packageData?.hotels"
+                                    [travelDetails]="packageData?.travelDetails"
+                                    [childPolicy]="packageData?.childPolicy" [meals]="packageData?.meals">
                                 </app-outbound-hotels>
-
-                                <app-outbound-summary *ngSwitchCase="'details'"
+                                <!-- <app-outbound-summary *ngSwitchCase="'details'"
                                     [details]="packageData?.supplementalAttractions"
                                     [specialOffers]="packageData?.specialOffers" [inclusions]="packageData?.inclusions"
                                     [exclusions]="packageData?.exclusions" [sightseeing]="packageData?.sightseeing">
@@ -152,24 +152,14 @@
 
             <div class="relative overflow-hidden w-full">
 
-                <!-- <div class="flex animate-marquee space-x-6">
-                    <div *ngFor="let highlight of stateHighlights" class="flex-shrink-0 w-80">
+                <div class="flex animate-marquee space-x-6">
+                    <div *ngFor="let gallery of packageData?.galleries" class="flex-shrink-0 w-80">
                         <div class="relative group rounded-xl overflow-hidden shadow-lg">
-                            <img [src]="highlight.img" [alt]="highlight.title"
-                                class="w-full h-56 object-cover transform group-hover:scale-105 transition duration-500">
-                        </div>
-                    </div> >
-                    <div *ngFor="let highlight of stateHighlights" class="flex-shrink-0 w-80">
-                        <div class="relative group rounded-xl overflow-hidden shadow-lg">
-                            <img [src]="highlight.img" [alt]="highlight.title"
-                                class="w-full h-56 object-cover transform group-hover:scale-105 transition duration-500">
-                            <div
-                                class="absolute inset-0 bg-black/30 opacity-0 group-hover:opacity-100 transition duration-300 flex items-center justify-center">
-                                <h3 class="text-white text-lg font-semibold">{{ highlight.title }}</h3>
-                            </div>
+                            <img [src]="gallery" alt="Gallery image"
+                                class="w-full h-56 object-cover transform group-hover:scale-105 transition duration-500" />
                         </div>
                     </div>
-                </div> -->
+                </div>
             </div>
         </section>
 
