--- a/src/app/components/home/home.html
+++ b/src/app/components/home/home.html
@@ -3,10 +3,10 @@
     <div class=" container mx-auto flex flex-col lg:flex-row items-center transition-all duration-700 ease-in-out">
         <div
             class="flex-1 text-center lg:text-left transform transition-all duration-700 ease-in-out px-4 ms-2 md:ms-12 md:px-12 space-y-8">
-            <div class="font-semibold text-lg lg:text-xl md:text-base tracking-wide text-red-500" data-aos="fade-right"
+            <!-- <div class="font-semibold text-lg lg:text-xl md:text-base tracking-wide text-red-500" data-aos="fade-right"
                 data-aos-anchor="#example-anchor" data-aos-offset="500" data-aos-duration="500">
                 <om-typewriter [words]="[' Simply not better!']"></om-typewriter>
-            </div>
+            </div> -->
             <h1 class="font-serif text-xl sm:text-xl md:text-2xl lg:text-3xl px-6 py-3 w-fit md:w-3/4
                        font-bold text-white bg-red-500 leading-tight rounded-lg shadow-lg" data-aos="fade-right"
                 data-aos-anchor="#example-anchor" data-aos-offset="500" data-aos-duration="500">
