--- a/src/app/components/inbound/inbound-package/inbound-package.html
+++ b/src/app/components/inbound/inbound-package/inbound-package.html
@@ -149,7 +149,7 @@
         <section data-animate="gallery" class="bg-white rounded-3xl shadow-xl py-4 mb-4">
             <h2 class="text-2xl font-bold text-red-500 mb-2 p-3 flex items-center">
                 <span class="bg-purple-100 p-3 pb-4 rounded-full mr-3">📸</span>
-                Guest Moments
+                Guest Clicks
             </h2>
 
             <div class="relative overflow-hidden w-full">
