--- a/src/app/components/pages/header/header.html
+++ b/src/app/components/pages/header/header.html
@@ -10,10 +10,10 @@
             <div class="flex flex-col leading-tight">
                 <span
                     class="text-xl md:text-2xl font-bold bg-gradient-to-r from-red-600 to-red-500 bg-clip-text text-transparent tracking-wide">
-                    IDT WORLD OF TRAVEL
+                    IDT WORLD
                 </span>
                 <span class="text-xs md:text-sm text-gray-700 italic">
-                    Passionately Curated, Authentically Crafted
+                    Authentically Crafted, Passionately Curated
                 </span>
             </div>
         </a>
