--- a/src/app/components/inbound/inbound.html
+++ b/src/app/components/inbound/inbound.html
@@ -1,8 +1,8 @@
 <app-quotes [quote]="quotes"></app-quotes>
-<div class="min-h-screen bg-gray-50/30 mt-12">
+<div class="min-h-screen bg-gray-50/30">
     <div class="relative text-center">
-        <div class="bg-white p-8 lg:px-[9rem] md:px-[6rem] rounded-xl shadow-sm bg-center mb-4"
-            style="background-image: url('assets/images/banner6.png'); ">
+        <div class="bg-white p-8 lg:px-[9rem] md:px-[6rem] rounded-xl shadow-sm bg-center mb-4 bg-cover"
+            style="background-image: url('assets/images/redBg13.jpg'); ">
             <h1
                 class="text-2xl md:text-4xl font-bold font-serif my-4 rounded-2xl py-3 border border-red-500 inline-block">
                 <span class="text-white bg-red-500 p-3 rounded-l-2xl">Inbound</span>
