--- a/src/app/components/inbound/inbound.html
+++ b/src/app/components/inbound/inbound.html
@@ -1,7 +1,7 @@
 <app-quotes [quote]="quotes"></app-quotes>
 <div class="min-h-screen bg-gray-50/30">
     <div class="relative text-center">
-        <div class="bg-white p-8 lg:px-[9rem] md:px-[6rem] rounded-xl shadow-sm bg-center mb-4 bg-cover"
+        <div class="bg-white p-8 lg:px-[9rem] md:px-[6rem]  shadow-sm bg-center mb-4 bg-cover"
             style="background-image: url('assets/images/redBg13.jpg'); ">
             <h1 class="text-xl md:text-4xl font-bold font-serif rounded-2xl py-3 border border-red-500 inline-block">
                 <span class="text-white bg-red-500 p-3 rounded-l-2xl">Inbound</span>
@@ -20,8 +20,8 @@
                 <div class="flex flex-wrap justify-center md:justify-start gap-2">
                     <button *ngFor="let tab of filterTabs" (click)="setFilter(tab.id)" class="px-4 py-2 rounded-full text-sm font-semibold whitespace-nowrap
                      border transition-all duration-300 shadow-sm" [ngClass]="activeFilter === tab.id
-                ? 'bg-red-500 text-white border-red-500 shadow-md'
-                : 'bg-white text-red-500 border-red-300 hover:bg-red-50'">
+                ? 'bg-white text-red-500 border-red-300 shadow-md'
+                : 'bg-red-500 text-white border-red-300 hover:bg-red-50 hover:text-red-600 hover:border-red-400'">
                         {{ tab.label }}
                     </button>
                 </div>
