--- a/src/app/components/home/home-hotels/home-hotels.html
+++ b/src/app/components/home/home-hotels/home-hotels.html
@@ -1,5 +1,5 @@
 <section data-aos="fade-in"
-    class="max-w-7xl mx-auto  p-4 rounded-2xl bg-gradient-to-br from-red-500 to-red-600 text-white">
+    class="max-w-9xl mx-auto p-4 rounded-2xl bg-gradient-to-br from-red-500 to-red-600 text-white">
     <h3 class="text-xl font-semibold mb-1"> <i class="pi pi-building + ' text-2xl mr-3'"></i>
         Hotels and Resorts </h3>
     <p class="text-sm opacity-90">Handpicked Stays for Every Destination</p>
@@ -11,56 +11,55 @@
             {{ dest.name }}
         </div>
     </div>
+</section>
 
+<!-- BACKDROP -->
+<div *ngIf="activeDestination" class="fixed inset-0 bg-black/80 backdrop-blur-sm z-40" (click)="closeModal()">
+</div>
 
-    <!-- BACKDROP -->
-    <div *ngIf="activeDestination" class="fixed inset-0 bg-black/80 backdrop-blur-sm z-40" (click)="closeModal()">
-    </div>
-
-    <!-- Modal -->
-    <div *ngIf="activeDestination" class="fixed inset-0 z-50 flex items-center justify-center px-3">
-        <div class="relative w-full max-w-3xl max-h-[80vh] overflow-y-auto
+<!-- Modal -->
+<div *ngIf="activeDestination" class="fixed inset-0 z-50 flex items-center justify-center px-3">
+    <div class="relative w-full max-w-3xl max-h-[80vh] overflow-y-auto
              rounded-2xl border border-red-500/20 shadow-[0_0_40px_rgba(255,0,80,0.15)]
              backdrop-blur-xl p-5 animate-scaleIn bg-cover bg-center bg-no-repeat"
-            [ngStyle]="{'background-image': 'url(assets/images/redBg12.jpg)'}" (click)="$event.stopPropagation()">
-            <div class="flex items-center justify-between mb-4">
-                <h3 class="text-xl md:text-2xl font-bold bg-gradient-to-r from-white to-red-50
+        [ngStyle]="{'background-image': 'url(assets/images/redBg12.jpg)'}" (click)="$event.stopPropagation()">
+        <div class="flex items-center justify-between mb-4">
+            <h3 class="text-xl md:text-2xl font-bold bg-gradient-to-r from-white to-red-50
                bg-clip-text text-transparent"> {{ activeDestination.name }} </h3>
-                <button (click)="closeModal()" class="w-8 h-8 rounded-full
+            <button (click)="closeModal()" class="w-8 h-8 rounded-full
                bg-white/10 hover:bg-red-600/80 text-sm flex items-center justify-center transition"> ✕
-                </button>
-            </div>
+            </button>
+        </div>
 
-            <!-- Categories -->
-            <div class="grid md:grid-cols-4 gap-2">
-                <div *ngFor="let cat of categoryKeys(activeDestination.categories)"
-                    class="border border-red-500/50 rounded-xl p-4">
+        <!-- Categories -->
+        <div class="grid md:grid-cols-4 gap-2">
+            <div *ngFor="let cat of categoryKeys(activeDestination.categories)"
+                class="border border-red-500/50 rounded-xl p-4">
 
-                    <h4 class=" font-semibold mb-2 text-white tracking-wide">{{ cat }}</h4>
+                <h4 class=" font-semibold mb-2 text-white tracking-wide">{{ cat }}</h4>
 
-                    <div class="space-y-1">
-                        <div *ngFor="let resort of activeDestination.categories[cat]">
+                <div class="space-y-1">
+                    <div *ngFor="let resort of activeDestination.categories[cat]">
 
-                            <div (click)="toggleResort(resort)" class="cursor-pointer px-3 py-2 rounded-lg
-                     bg-black/40 hover:bg-red-500/20 hover:border-white  hover:border-2 transition
+                        <div (click)="toggleResort(resort)" class="cursor-pointer px-3 py-2 rounded-lg
+                     bg-black/40 hover:bg-red-500/20 hover:border-white  hover:border-2 transition text-white
                      flex justify-between items-center">
-                                <span class="text-sm">{{ resort.name }}</span>
-                                <span class="text-red-400 text-xs">
-                                    {{ openResort === resort ? '−' : '+' }}
-                                </span>
-                            </div>
-
-                            <!-- Accordion -->
-                            <div *ngIf="openResort === resort"
-                                class="mt-2 p-3 rounded-lg bg-black/60 border border-red-500/20">
-                                <img [src]="resort.image" class="w-full h-40 object-cover rounded-lg mb-2">
-                                <p class="text-xs text-gray-300"> {{ resort.desc }} </p>
-                            </div>
-
+                            <span class="text-sm">{{ resort.name }}</span>
+                            <span class="text-red-400 text-xs">
+                                {{ openResort === resort ? '−' : '+' }}
+                            </span>
                         </div>
+
+                        <!-- Accordion -->
+                        <div *ngIf="openResort === resort"
+                            class="mt-2 p-3 rounded-lg bg-black/60 border border-red-500/20">
+                            <img [src]="resort.image" class="w-full h-40 object-cover rounded-lg mb-2">
+                            <p class="text-xs text-gray-300"> {{ resort.desc }} </p>
+                        </div>
+
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</section>
+</div>
